src/objects/Library_Item_Limit__c.object
<CustomObject>
    <description>Borrowing limit for Library Item per category</description>
    <fields>
        <fullName>Borrowing_Limit__c</fullName>
        <formula>CASE (TEXT( Borrowing_Period__c ),
&apos;Days&apos;,  Borrowing_Period_Interval__c, 
&apos;Hours&apos;, Borrowing_Period_Interval__c / 24,
14
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrowing Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowing_Period_Interval__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Borrowing Period Interval</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowing_Period__c</fullName>
        <label>Borrowing Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                    <default>true</default>
                    <label>Days</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Library Item category that this borrowing limit applies.</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Library_Item_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Tags_Formula__c</fullName>
        <formula>TEXT(Borrowing_Period__c) + &quot; &quot; + TEXT(Borrowing_Period_Interval__c) + &quot; &quot; + TEXT(Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Tags Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Library Item Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Borrowing_Period__c</columns>
        <columns>Borrowing_Period_Interval__c</columns>
        <columns>Borrowing_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Library_Item_Limit__c.Library_Item_Limit</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Item Limits</pluralLabel>
    <recordTypes>
        <fullName>Library_Item_Limit</fullName>
        <active>true</active>
        <label>Library Item Limit</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Positive</fullName>
        <active>true</active>
        <description>Validates that the limit is greater than zero</description>
        <errorConditionFormula>Borrowing_Period_Interval__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Borrowing_Period_Interval__c</errorDisplayField>
        <errorMessage>Borrowing limit value must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>